syntax="proto3";
option go_package = ".;main";

package main;

message SocialFollowers {
  int32 youtube = 1;
  int32 twitter = 2;
}

message Person {
  string name = 1;
  int32 age = 2;
  SocialFollowers socialFollowers = 3;
}
